--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -39,7 +39,7 @@
 .menu__cards {
   width: 100%;
   display: flex;
-  flex-flow: row wrap;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 100px;
   margin: 0 auto;
